Restore static footer text, remove green dot, keep ticker only in sidebar

--- a/public/index.html
+++ b/public/index.html
@@ -87,7 +87,6 @@
 
             <div class="sidebar-footer">
                 <div class="server-status" id="serverStatus">
-                    <span class="status-dot"></span>
                     <div class="status-ticker">
                         <div class="ticker-track" id="tickerTrack">
                             <span class="status-text">Checking...</span>
@@ -607,11 +606,7 @@
             </div>
 
             <footer class="footer">
-                <div class="footer-ticker">
-                    <div class="ticker-track" id="footerTickerTrack">
-                        <span>Powered by <strong>C++ & FFmpeg</strong> &mdash; Built with <i class="fas fa-heart"></i> by Luma</span>
-                    </div>
-                </div>
+                <span>Powered by <strong>C++ & yt-dlp</strong> &mdash; Built with <i class="fas fa-heart"></i> by Luma</span>
             </footer>
         </main>
     </div>
