Add FFmpeg & Ghostscript to footer, draggable sidebar ticker

--- a/public/index.html
+++ b/public/index.html
@@ -606,7 +606,7 @@
             </div>
 
             <footer class="footer">
-                <span>Powered by <strong>C++ & yt-dlp</strong> &mdash; Built with <i class="fas fa-heart"></i> by Luma</span>
+                <span>Powered by <strong>C++</strong>, <strong>FFmpeg</strong>, <strong>yt-dlp</strong> & <strong>Ghostscript</strong> &mdash; Built with <i class="fas fa-heart"></i> by Luma</span>
             </footer>
         </main>
     </div>
