Add Ko-fi support button (floating + footer)

--- a/public/index.html
+++ b/public/index.html
@@ -607,9 +607,17 @@
 
             <footer class="footer">
                 <span>Powered by <strong>C++</strong>, <strong>FFmpeg</strong>, <strong>yt-dlp</strong> & <strong>Ghostscript</strong> &mdash; Built with <i class="fas fa-heart"></i> by Luma</span>
+                <a href="https://ko-fi.com/lumaexe" target="_blank" rel="noopener" class="footer-kofi"><i class="fas fa-mug-hot"></i> Buy me a coffee</a>
             </footer>
         </main>
     </div>
+
+    <!-- Ko-fi floating button -->
+    <a href="https://ko-fi.com/lumaexe" target="_blank" rel="noopener" class="kofi-float" title="Support on Ko-fi">
+        <span class="kofi-icon"><i class="fas fa-mug-hot"></i></span>
+        <span class="kofi-label">Support</span>
+        <span class="kofi-shine"></span>
+    </a>
 
     <div class="sidebar-overlay" id="sidebarOverlay" onclick="toggleSidebar()"></div>
     <script src="app.js"></script>
