--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,7 @@
                         <i class="fas fa-code"></i><span>Base64</span>
                     </a>
                     <a class="nav-item" data-tool="json-format" onclick="switchTool('json-format')">
-                        <i class="fas fa-brackets-curly"></i><span>JSON Formatter</span>
+                        <i class="fas fa-file-code"></i><span>JSON Formatter</span>
                     </a>
                     <a class="nav-item" data-tool="color-convert" onclick="switchTool('color-convert')">
                         <i class="fas fa-palette"></i><span>Color Converter</span>
@@ -1024,7 +1024,7 @@
             <!-- ──────────── JSON FORMATTER ──────────── -->
             <div class="tool-panel" id="tool-json-format">
                 <div class="tool-header">
-                    <h2><i class="fas fa-brackets-curly"></i> JSON Formatter</h2>
+                    <h2><i class="fas fa-file-code"></i> JSON Formatter</h2>
                     <p>Format, validate, and beautify JSON data</p>
                 </div>
                 <div class="tool-body">
@@ -1057,15 +1057,41 @@
                     <p>Convert between HEX, RGB, and HSL color formats</p>
                 </div>
                 <div class="tool-body">
-                    <div class="color-input-section">
-                        <div class="color-preview-box" id="colorPreview" style="background:#6366f1"></div>
-                        <div class="color-inputs-grid">
-                            <div class="color-field"><label>HEX</label><input type="text" id="colorHex" value="#6366f1" oninput="updateColorFrom('hex')"></div>
-                            <div class="color-field"><label>RGB</label><input type="text" id="colorRgb" value="99, 102, 241" oninput="updateColorFrom('rgb')"></div>
-                            <div class="color-field"><label>HSL</label><input type="text" id="colorHsl" value="239, 84%, 67%" oninput="updateColorFrom('hsl')"></div>
+                    <div class="color-tabs">
+                        <button class="color-tab active" onclick="switchColorTab('inputs')"><i class="fas fa-sliders-h"></i> Values</button>
+                        <button class="color-tab" onclick="switchColorTab('wheel')"><i class="fas fa-circle-notch"></i> Color Wheel</button>
+                    </div>
+                    <div class="color-tab-content active" id="colorTabInputs">
+                        <div class="color-input-section">
+                            <div class="color-preview-box" id="colorPreview" style="background:#6366f1"></div>
+                            <div class="color-inputs-grid">
+                                <div class="color-field"><label>HEX</label><input type="text" id="colorHex" value="#6366f1" oninput="updateColorFrom('hex')"></div>
+                                <div class="color-field"><label>RGB</label><input type="text" id="colorRgb" value="99, 102, 241" oninput="updateColorFrom('rgb')"></div>
+                                <div class="color-field"><label>HSL</label><input type="text" id="colorHsl" value="239, 84%, 67%" oninput="updateColorFrom('hsl')"></div>
+                            </div>
                         </div>
                     </div>
-                    <div class="color-picker-wrap"><input type="color" id="colorPicker" value="#6366f1" oninput="updateColorFrom('picker')"></div>
+                    <div class="color-tab-content" id="colorTabWheel">
+                        <div class="color-wheel-section">
+                            <div class="color-wheel-wrap">
+                                <canvas id="colorWheel" width="240" height="240"></canvas>
+                                <div class="color-wheel-cursor" id="wheelCursor"></div>
+                            </div>
+                            <div class="color-brightness-wrap">
+                                <label>Brightness</label>
+                                <input type="range" id="wheelBrightness" min="0" max="100" value="100" oninput="updateWheelBrightness()">
+                            </div>
+                            <div style="margin-top:16px">
+                                <div class="color-input-section">
+                                    <div class="color-preview-box" id="colorPreviewWheel" style="background:#6366f1"></div>
+                                    <div class="color-inputs-grid">
+                                        <div class="color-field"><label>HEX</label><input type="text" id="colorHexWheel" value="#6366f1" readonly></div>
+                                        <div class="color-field"><label>RGB</label><input type="text" id="colorRgbWheel" value="99, 102, 241" readonly></div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
 
