--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,15 @@
     <meta property="og:url" content="https://tools.lumaplayground.com">
     <meta property="og:title" content="Luma Tools">
     <meta property="og:description" content="Free online media toolkit — download videos, convert images, generate QR codes, and 20+ more tools.">
+    <meta property="og:image" content="https://tools.lumaplayground.com/og-image.png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:site_name" content="Luma Tools">
     <meta name="theme-color" content="#7c5cff">
-    <meta name="twitter:card" content="summary">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Luma Tools — Universal Media Toolkit">
     <meta name="twitter:description" content="Free online media toolkit — download videos, convert images, generate QR codes, and 20+ more tools.">
+    <meta name="twitter:image" content="https://tools.lumaplayground.com/og-image.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
