--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://tools.lumaplayground.com">
     <meta property="og:title" content="Luma Tools">
-    <meta property="og:description" content="Free online media toolkit — download videos, convert images, generate QR codes, and 20+ more tools.">
+    <meta property="og:description" content="Free online media toolkit — download videos, convert images, compress PDFs and 20+ more tools.">
     <meta property="og:image" content="https://tools.lumaplayground.com/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -17,7 +17,7 @@
     <meta name="theme-color" content="#7c5cff">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Luma Tools — Universal Media Toolkit">
-    <meta name="twitter:description" content="Free online media toolkit — download videos, convert images, generate QR codes, and 20+ more tools.">
+    <meta name="twitter:description" content="Free online media toolkit — download videos, convert images, compress PDFs and 20+ more tools.">
     <meta name="twitter:image" content="https://tools.lumaplayground.com/og-image.png">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
