Update landing page text: modify description to clarify that files can be dragged onto the website.

--- a/public/index.html
+++ b/public/index.html
@@ -229,7 +229,7 @@
                     <div class="landing-drop-cta">
                         <div class="landing-drop-icon"><i class="fas fa-cloud-upload-alt"></i></div>
                         <h2>Drop any file to get started</h2>
-                        <p>Drag an image, video, audio, or PDF anywhere on the page. LumaTools will detect the file type and suggest the right tools instantly.</p>
+                        <p>Drag an image, video, audio, or PDF anywhere on this website. LumaTools will detect the file type and suggest the right tools instantly.</p>
                     </div>
 
                     <div class="landing-features">
