Update landing page tagline: simplify description by removing 'open-source' to enhance clarity.

--- a/public/index.html
+++ b/public/index.html
@@ -205,7 +205,7 @@
                     <div class="landing-hero">
                         <div class="landing-logo-icon"><i class="fas fa-bolt"></i></div>
                         <h1 class="landing-title">LUMA<span>TOOLS</span></h1>
-                        <p class="landing-tagline">A free, open-source media toolkit built for speed and privacy.</p>
+                        <p class="landing-tagline">A free, media toolkit built for speed and privacy.</p>
                     </div>
 
                     <div class="landing-about">
